--- a/index.html
+++ b/index.html
@@ -4,6 +4,14 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=no">
     <title>SMMD Compta - Connexion</title>
+    
+    <link rel="manifest" href="manifest.json">
+    <meta name="apple-mobile-web-app-capable" content="yes">
+    <meta name="apple-mobile-web-app-status-bar-style" content="black-translucent">
+    <meta name="apple-mobile-web-app-title" content="SMMD">
+    <link rel="apple-touch-icon" href="https://fav.farm/🏠">
+    <meta name="theme-color" content="#1e40af">
+
     <script src="https://cdn.tailwindcss.com"></script>
     <script src="https://cdn.jsdelivr.net/npm/@supabase/supabase-js@2"></script>
     <style>
@@ -75,7 +83,6 @@
                 return;
             }
 
-            // Ajout automatique du domaine si absent
             if(!identifier.includes('@')) identifier += "@smmd.fr";
 
             btn.disabled = true;
@@ -100,35 +107,43 @@
             redirectUser(data.user.id);
         }
 
-        // 3. LOGIQUE D'AIGUILLAGE PAR RÔLE (MODIFIÉE)
+        // 3. LOGIQUE D'AIGUILLAGE PAR RÔLE
         async function redirectUser(userId) {
-    const { data: profile, error: profError } = await sb
-        .from('profiles')
-        .select('role')
-        .eq('id', userId)
-        .maybeSingle(); // Utilise maybeSingle au lieu de single
+            const { data: profile, error: profError } = await sb
+                .from('profiles')
+                .select('role')
+                .eq('id', userId)
+                .maybeSingle();
 
-    if (profError) {
-        console.error("Erreur:", profError.message);
-        return;
-    }
+            if (profError) {
+                console.error("Erreur:", profError.message);
+                return;
+            }
 
-    if (!profile) {
-        document.getElementById('error-msg').innerText = "Profil introuvable en base.";
-        document.getElementById('error-msg').classList.remove('hidden');
-        await sb.auth.signOut();
-        return;
-    }
+            if (!profile) {
+                document.getElementById('error-msg').innerText = "Profil introuvable en base.";
+                document.getElementById('error-msg').classList.remove('hidden');
+                await sb.auth.signOut();
+                return;
+            }
 
-    // Redirection selon le rôle
-    if (profile.role === 'chef') {
-        window.location.href = "chef.html";
-    } else if (profile.role === 'admin') {
-        window.location.href = "admin.html";
-    } else {
-        window.location.href = "user.html";
-    }
-}
+            if (profile.role === 'chef') {
+                window.location.href = "chef.html";
+            } else if (profile.role === 'admin') {
+                window.location.href = "admin.html";
+            } else {
+                window.location.href = "user.html";
+            }
+        }
+
+        // 4. ENREGISTREMENT DU SERVICE WORKER POUR PWA
+        if ('serviceWorker' in navigator) {
+            window.addEventListener('load', () => {
+                navigator.serviceWorker.register('./sw.js')
+                    .then(reg => console.log('SW enregistré'))
+                    .catch(err => console.log('Erreur SW', err));
+            });
+        }
 
         checkSession();
     </script>
